--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-boost": "^0.1.10",
+    "apollo-boost": "^0.1.6",
     "jwt-decode": "^2.2.0",
     "react": "^16.4.2",
-    "react-apollo": "^2.1.11",
+    "react-apollo": "^2.1.4",
     "react-dom": "^16.4.2",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.4",
+    "react-spinners": "^0.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
