--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react-apollo": "^2.1.4",
     "react-ckeditor-component": "^1.1.0",
     "react-dom": "^16.4.2",
+    "react-pose": "^3.0.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "react-spinners": "^0.3.2"
